# agent-repl

./: .gitignore  AGENTS.md  Makefile  README.md  prd.md  pyproject.toml  requirements.txt
.specs/01_base_app/: design.md  requirements.md  tasks.md
.specs/01_copy_last_output/: design.md  prd.md  requirements.md  tasks.md
.specs/02_slash_command_menu/: design.md  prd.md  requirements.md  tasks.md
.specs/02_tool_display_enhancement/: design.md  prd.md  requirements.md  tasks.md
.specs/03_agent_input_requests/: design.md  prd.md  requirements.md  tasks.md
.specs/04_audit_trail/: design.md  prd.md  requirements.md  tasks.md
.specs/05_notifications/: design.md  requirements.md  tasks.md
docs/: agent-progress.txt  api.md
examples/: README.md  demo.py  demo_plugin.py  echo_agent.py  spawn_demo.py
src/agent_repl/: __init__.py  app.py  audit_logger.py  builtin_commands.py  clipboard.py  command_registry.py  completer.py  config_loader.py  constants.py  exceptions.py  file_context.py  input_parser.py  plugin_loader.py  plugin_registry.py  repl.py  session.py  session_spawner.py  stream_handler.py  tui.py  types.py
tests/: conftest.py  test_app.py  test_audit_logger.py  test_builtin_commands.py  test_claude_agent.py  test_cli.py  test_clipboard.py  test_command_registry.py  test_completer.py  test_config_loader.py  test_exceptions.py  test_file_context.py  test_input_parser.py  test_plugin_loader.py  test_plugin_system.py  test_repl.py  test_session.py  test_session_spawner.py  test_stream_handler.py  test_tui.py  test_types.py
(+6 files in other folders)
