[project]
name = "agent_repl"
version = "0.1.0"
description = "A REPL-style TUI framework for interacting with AI agents"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "rich",
    "prompt-toolkit",
    "claude-agent-sdk",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "hypothesis",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_repl"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "property: property-based tests using Hypothesis",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
